2007-05-11  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_flush),
	(gst_rtspsrc_do_seek), (gst_rtspsrc_perform_seek),
	(gst_rtspsrc_handle_src_event),
	(gst_rtspsrc_stream_configure_manager),
	(gst_rtspsrc_stream_configure_tcp), (gst_rtspsrc_loop_interleaved),
	(gst_rtspsrc_send_keep_alive), (gst_rtspsrc_open),
	(gst_rtspsrc_parse_rtpinfo), (gst_rtspsrc_play):
	* gst/rtsp/gstrtspsrc.h:
	* gst/rtsp/rtspdefs.h:
	Preliminary seek support.
	Activate internal pads so that we can receive events on them.
	Don't try to parse a range string when it's NULL.

2007-05-11  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/README:
	Update README with new RTP variables that will be used for
	synchronisation.

	* gst/rtp/gstrtpvorbisdepay.c: (decode_base64),
	(gst_rtp_vorbis_depay_parse_configuration),
	(gst_rtp_vorbis_depay_process):
	* gst/rtp/gstrtpvorbispay.c: (encode_base64),
	(gst_rtp_vorbis_pay_finish_headers),
	(gst_rtp_vorbis_pay_handle_buffer):
	Update vorbis pay and depayloader to draft-04.

2007-05-11  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/rtsptransport.c:
	UDP MCAST is actually the default for RTP/AVP.

2007-05-11  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* sys/ximage/gstximagesrc.c (gst_ximage_src_start,
	  gst_ximage_src_ximage_get):
	* sys/ximage/gstximagesrc.h (last_ximage):
	When using Damage actually keep the last frame, and not assume
	that the buffer we get already has the last frame on it.
	Copy the cursor over if we specify a non-zero start x and
	start y.

2007-05-11  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/rtsptransport.c:
	Make UDP the default transport when not specified.

2007-05-09  David Schleef  <ds@schleef.org>

	* gst/level/gstlevel.c:
	  Revert last change.

2007-05-09  Sebastien Moutte  <sebastien@moutte.net>

	* gst/level/gstlevel.c: (gst_level_calculate_##TYPE),
	(gst_level_transform_ip):
	Use guint8 * instead of gpointer then vs6 know the size of data
	pointed when moving the pointer.